new italian stuff

--- a/KOS/localisation/ooselid_countries.csv
+++ b/KOS/localisation/ooselid_countries.csv
@@ -211,6 +211,10 @@ SIM;Simmern;x;;;;
 SIM_ADJ;Simmern;x;;;;
 JUL;Julich;x;;;;
 JUL_ADJ;Julicher;x;;;;
+CAP;Capua;x;;;;
+CAP_ADJ;Capuan;x;;;;
+SLR;Salerno;x;;;;
+SLR_ADJ;Salerno;x;;;;
 OOS_conservative;Konstitutsionalistid Kliik;x;;;;
 OOS_liberal;Hyvinvointi Parteix;;;;
 OOS_reactionary;Ehejumalikunig Kildkond;x;;;;
