--- a/KOS/localisation/ooselid_countries.csv
+++ b/KOS/localisation/ooselid_countries.csv
@@ -215,6 +215,8 @@ CAP;Capua;x;;;;
 CAP_ADJ;Capuan;x;;;;
 SLR;Salerno;x;;;;
 SLR_ADJ;Salerno;x;;;;
+KRS;Korsia;x;;;;
+KRS_ADJ;Korsian;x;;;;
 OOS_conservative;Konstitutsionalistid Kliik;x;;;;
 OOS_liberal;Hyvinvointi Parteix;;;;
 OOS_reactionary;Ehejumalikunig Kildkond;x;;;;
