Culture fixes/colour changes

--- a/KOS/localisation/00_HPM_countries.csv
+++ b/KOS/localisation/00_HPM_countries.csv
@@ -1925,7 +1925,7 @@ RYU_radical;Libertarian Party;;;;;;;;;;;;;
 RYU_socialist;Social-Democratic Pary;;;;;;;;;;;;;
 RYU_communist;United Workers Party;;;;;;;;;;;;;
 RYU_fascist;National-Socialist Party;;;;;;;;;;;;;
-SAA;Saarland;Sarre;Saarland;;Saarland;;;;;;;;;
+SAA;Saarbrücken;Sarrebrucken;Saarland;;Saarland;;;;;;;;;
 SAA_ADJ;Saarlander;Sarrois;Saarlander;;Saarlander;;;;;;;;;
 SAA_liberal;Liberaldem. Partei;Liberaldem. Partei;Liberaldem. Partei;;;;;;;;;;;
 SAA_conservative;Zentrumspartei;Zentrumspartei;Zentrumspartei;;;;;;;;;;;
@@ -1936,6 +1936,7 @@ SAA_conservative_2;Konservative Partei;Konservative Partei;Konservative Partei;;
 SAA_radical;Radical Arbeiterpartei;Arbeiterpartei radical;Radikale Arbeiterpartei;;;;;;;;;;;
 SAA_communist;Communist Arbeiterpartei;Arbeiterpartei communiste;Kommunistische Arbeiterpartei;;;;;;;;;;;
 SAA_fascist;NSDP;NSDP;NSDP;;;;;;;;;;;
+SAA_fascist_dictatorship;Saarbrigge;NSDP;NSDP;;;;;;;;;;;
 SAR_reactionary;Restaurazionisti;Restaurazionisti;Restaurazionisti;;Restaurazionis ti;;;;;;;;;
 SAR_conservative;Moderati;Moderati ;Moderati;;Moderati ;;;;;;;;;
 SAR_liberal;Riformisti;Riformisti ;Riformisti;;Riformisti ;;;;;;;;;
