--- a/KOS/localisation/FlavoursModNewCountries.csv
+++ b/KOS/localisation/FlavoursModNewCountries.csv
@@ -162,7 +162,7 @@ PML_colonial_company;Westpreußen;;;;;;;;;;;;;
 PML_dominion;Westpreuï¿½en;;;;;;;;;;;;;
 POL_colonial_company;Generalgouvernement;;;;;;;;;;;;;
 POL_dominion;Generalgouvernement;;;;;;;;;;;;;
-BOH_dominion;Böhemen;;;;;;;;;;;;;
+BOH_dominion;Böhmen;;;;;;;;;;;;;
 SCH_colonial_company;Slesvig;;;;;;;;;;;;;
 SCH_dominion;Slesvig;;;;;;;;;;;;;
 HOL_colonial_company;Holsten;;;;;;;;;;;;;
