--- a/KOS/localisation/newtext.csv
+++ b/KOS/localisation/newtext.csv
@@ -81,8 +81,8 @@ USA_hms_government_ADJ;American;Américain;Amerikanisch;;americana;;;;;;;;;
 USA_proletarian_dictatorship_ADJ;American;Américain;Amerikanisch;;americana;;;;;;;;;
 ENG_proletarian_dictatorship;The Worker's Commonwealth;Commonwealth des ouvriers;The Worker's Commonwealth;;La Commonwealth de los Trabajadores;;;;;;;;;
 ENG_proletarian_dictatorship_ADJ;British;Britannique;Britisch;;de Gran Bretaña;;;;;;;;;
-BOH_democracy;Böhemen Republic;République tchèque;Tschechische Republik;;República Checa;;;;;;;;;
-BOH_democracy_ADJ;Böhemish;Tchèque;Tschechisch;;checa;;;;;;;;;
+BOH_democracy;Böhmer Republic;République tchèque;Tschechische Republik;;República Checa;;;;;;;;;
+BOH_democracy_ADJ;Böhmiser;Tchèque;Tschechisch;;checa;;;;;;;;;
 TUR_democracy;Turkey;Turquie;Türkei;;Turquía;;;;;;;;;
 TUR_democracy_ADJ;Turkish;Turc;Türkisch;;turca;;;;;;;;;
 BAV_proletarian_dictatorship;Bavarian Räterepublik;Räterepublik bavaroise;Bayerische Räterepublik;;República Autogestionada de Baviera;;;;;;;;;
