--- a/KOS/localisation/text.csv
+++ b/KOS/localisation/text.csv
@@ -638,7 +638,7 @@ WAL;Wallachia;Valachie;Walachei;;Valaquia;;;;;;;;;
 SWI;Helvetica;Helvetica;Helvetica;;Helvetica;;;;;;;;;
 SLO;Slovenia;Slovénie;Slowenien;;Eslovenia;;;;;;;;;
 AUS;Austria;Autriche;Österreich;;Austria;;;;;;;;;
-BOH;Beumen;Beumen;Beumen;;Beumen;;;;;;;;;
+BOH;Baumen;Beumen;Beumen;;Beumen;;;;;;;;;
 DZG;Danzig;Dantzig;Danzig;;Danzig;;;;;;;;;
 KRA;Wieslanie;Wieslanie;Wieslanie;;Wieslania;;;;;;;;;
 CRI;Crimea;Crimée;Krim;;Crimea;;;;;;;;;
@@ -908,7 +908,7 @@ COB_ADJ;Saxon;Saxon;Sächsisch;;Sajona;;;;;;;;;
 MEI_ADJ;Saxon;Saxon;Sächsisch;;Sajona;;;;;;;;;
 WEI_ADJ;Saxon;Saxon;Sächsisch;;Sajona;;;;;;;;;
 SAX_ADJ;Saxon;Saxon;Sächsisch;;Sajona;;;;;;;;;
-BOH_ADJ;Bohemish;Bohémien;Böhmisch;;Bohemia;;;;;;;;;
+BOH_ADJ;Baumer;Bohémien;Böhmisch;;Bohemia;;;;;;;;;
 VEN_ADJ;Venetian;Vénitien;Venezianisch;;Veneciana;;;;;;;;;
 LOM_ADJ;Lombardian;Lombard;Lombardisch;;Lombarda;;;;;;;;;
 HEK_ADJ;Hessian;Hessien;Hessisch;;Hessiana;;;;;;;;;
