--- a/KOS/localisation/ooselid_countries.csv
+++ b/KOS/localisation/ooselid_countries.csv
@@ -499,6 +499,19 @@ aeolic;Aeolic;x;;;;
 ionic;Ionic;x;;;;
 dodecanese;Dodecanese;x;;;;
 lycian;Lycian;x;;;;
+pamphylian;Pamphylian;x;;;;
+carian;Carian;x;;;;
+lydian;Lydian;x;;;;
+phrygian;Phrygian;x;;;;
+pisidian;Pisidian;x;;;;
+milyan;Milyan;x;;;;
+mysian;Mysian;x;;;;
+paphlagonian;Paphlagonian;x;;;;
+isaurian;Isaurian;x;;;;
+cataonian;Cataonian;x;;;;
+trojan;Trojan;x;;;;
+lycaonian;Lycaonian;x;;;;
+galatian;Galatian;x;;;;
 cypriot;Cypriot;x;;;;
 epirote;Epirote;x;;;;
 ionian;Ionian;x;;;;
