Arabia pops & countries

--- a/KOS/localisation/0000_IranRework.csv
+++ b/KOS/localisation/0000_IranRework.csv
@@ -51,8 +51,8 @@ QSM;Qasimi Federation;;;;;;;;;;;;;
 QSM_ADJ;Qasimi;;;;;;;;;;;;;
 KAL;Khanate of Kalat;;;;;;;;;;;;;
 KAL_ADJ;Kalati;;;;;;;;;;;;;
-DUB;Emirate of Dubai;;;;;;;;;;;;;
-DUB_ADJ;Dubai;;;;;;;;;;;;;
+DUB;Bani Yas;;;;;;;;;;;;;
+DUB_ADJ;Bani Yas;;;;;;;;;;;;;
 KHA;Kappadokia;;;;;;;;;;;;;
 KHA_ADJ;Kappadokian;;;;;;;;;;;;;
 DJK;Lesser Armenia;;;;;;;;;;;;;
