--- a/KOS/localisation/ooselid_countries.csv
+++ b/KOS/localisation/ooselid_countries.csv
@@ -315,6 +315,7 @@ uto_nahuatl;Uto-Nahuatl;x;;;;
 keres_group;Keres;x;;;;
 zuni_group;Zuni;x;;;;
 tanoan;Tanoan;x;;;;
+south_semitic;South Semitic;x;;;;
 na_dene;Na-Dene;x;;;;
 tawjilit;Tawjilit;x;;;;
 tasuknit;Tasuknit;x;;;;
@@ -537,7 +538,7 @@ khaliji;Khaliji;x;;;;
 hijazi;Hijazi;x;;;;
 bahrani;Bahrani
 najdi;Najdi;x;;;;
-judeo_hijazi;Judeo-Hijazi;x;;;;
+judeo_hijazi;Judeo-Arabic;x;;;;
 nabataean;Nabataean;x;;;;
 jassic;Jasz;x;;;;
 kurenai;Kurenaike Greek;x;;;;
@@ -572,6 +573,10 @@ niminii;Niminii;x;;;;
 taino;Taino;x;;;;
 siboney;Siboney;x;;;;
 guanahatabey;Guanahatabey;x;;;;
+sabaic;Sabaic;x;;;;
+mehri;Mehri;x;;;;
+hersiyet;Hersiyet;x;;;;
+hewbyot;Hewbyot;x;;;;
 ooselid_pantheon;Ooselid Pantheon;x;;;;
 ooselskia;Ooselskia;x;;;;
 modern_pagan;Modern Paganism;x;;;;
