Denmark-Norway & fixes

--- a/KOS/localisation/ooselid_countries.csv
+++ b/KOS/localisation/ooselid_countries.csv
@@ -58,7 +58,7 @@ PAO;Paeonia;x;;;;
 PAO_ADJ;Paeonian;x;;;;
 THA;Thrace;x;;;;
 THA_ADJ;Thracian;x;;;;
-AGL;Anglia;x;;;;
+AGL;Angeln;x;;;;
 AGL_ADJ;Angle;x;;;;
 SMG;Samogovia;x;;;;
 SMG_ADJ;Samogovian;x;;;;
@@ -577,6 +577,8 @@ sabaic;Sabaic;x;;;;
 mehri;Mehri;x;;;;
 hersiyet;Hersiyet;x;;;;
 hewbyot;Hewbyot;x;;;;
+skansk;Skansk;x;;;;
+vinlandic;Vinlandic;x;;;;
 ooselid_pantheon;Ooselid Pantheon;x;;;;
 ooselskia;Ooselskia;x;;;;
 modern_pagan;Modern Paganism;x;;;;
