Swedish countries + added Kvens

--- a/KOS/localisation/ooselid_countries.csv
+++ b/KOS/localisation/ooselid_countries.csv
@@ -217,6 +217,16 @@ SLR;Salerno;x;;;;
 SLR_ADJ;Salerno;x;;;;
 KRS;Korsia;x;;;;
 KRS_ADJ;Korsian;x;;;;
+KVE;Kvenland;x;;;;
+KVE_ADJ;Kvaani ;x;;;;
+GEA;Geatland;x;;;;
+GEA_ADJ;Gautar;x;;;;
+SMA;Smaland;x;;;;
+SMA_ADJ;Smalanning;x;;;;
+OLA;Oland;x;;;;
+OLA_ADJ;Olander;x;;;;
+SCN;Skane;x;;;;
+SCN_ADJ;Skansk;x;;;;
 OOS_conservative;Konstitutsionalistid Kliik;x;;;;
 OOS_liberal;Hyvinvointi Parteix;;;;
 OOS_reactionary;Ehejumalikunig Kildkond;x;;;;
@@ -579,6 +589,7 @@ hersiyet;Hersiyet;x;;;;
 hewbyot;Hewbyot;x;;;;
 skansk;Skansk;x;;;;
 vinlandic;Vinlandic;x;;;;
+kvaani;Kvaani;x;;;;
 ooselid_pantheon;Ooselid Pantheon;x;;;;
 ooselskia;Ooselskia;x;;;;
 modern_pagan;Modern Paganism;x;;;;
