--- a/KOS/localisation/00_HPM_map.csv
+++ b/KOS/localisation/00_HPM_map.csv
@@ -360,7 +360,7 @@ PROV112;Fort Laramie;;;;;;;;;;;;;
 PROV106;Bent's Fort;;;;;;;;;;;;;
 PROV2702;Alty-Kuduk;;;;;;;;;;;;;
 PROV686;Merv;;;;;;;;;;;;;
-BUR_1334;Mandalay;;;;;;;;;;;;;
+BUR_1334;Tagaung;;;;;;;;;;;;;
 PROV579;Neuwied;;;;;;;;;;;;;
 PROV574;Koblenz;;;;;;;;;;;;;
 PROV547;Greifswald;;;;;;;;;;;;;
@@ -677,8 +677,8 @@ PAN_1233;Amritsar;;;;;;;;;;;;;
 ENG_1244;Awadh;;;;;;;;;;;;;
 NEP_1326;Western Himalayas;;;;;;;;;;;;;
 SIA_1352;Pattani;;;;;;;;;;;;;
-SIA_1355;Shan;;;;;;;;;;;;;
-LUA_1356;Laos;;;;;;;;;;;;;
+SIA_1355;Wa;;;;;;;;;;;;;
+LUA_1356;New Khmer;;;;;;;;;;;;;
 SIA_1358;Isan;;;;;;;;;;;;;
 PROV1360;Xiangabouli;;;;;;;;;;;;;
 DAI_1369;Tonkin;;;;;;;;;;;;;
@@ -686,7 +686,7 @@ DAI_1375;Annam;;;;;;;;;;;;;
 DAI_1380;Cochinchina;;;;;;;;;;;;;
 ENG_1384;Southern Malaya;;;;;;;;;;;;;
 ENG_1391;Northern Malaya;;;;;;;;;;;;;
-SIA_1392;Ayutthaya;;;;;;;;;;;;;
+SIA_1392;Lavo;;;;;;;;;;;;;
 BRU_1394;West Borneo;;;;;;;;;;;;;
 BRU_1396;North Borneo;;;;;;;;;;;;;
 NET_1413;West Java;;;;;;;;;;;;;
@@ -961,7 +961,7 @@ PROV3549;Hsipaw;;;;;;;;;;;;;
 PROV3550;Kengtung;;;;;;;;;;;;;
 PROV3551;Lawksawk;;;;;;;;;;;;;
 PROV3552;Mongpan;;;;;;;;;;;;;
-PROV3553;Mongmit;;;;;;;;;;;;;
+PROV3553;Bhamo;;;;;;;;;;;;;
 PROV3554;Kungkeng;;;;;;;;;;;;;
 PROV3555;Spittal;;;;;;;;;;;;;
 PROV3556;Liezen;;;;;;;;;;;;;
