--- a/KOS/localisation/darkness.csv
+++ b/KOS/localisation/darkness.csv
@@ -161,7 +161,8 @@ ANN_1374;Annam;Annam;Annam;;Annam;;;;;;;;;
 ANN_1383;Cochin China;Cochin China;Cochinchina;;Cochin China;;;;;;;;;
 ENG_1343;Tenasserim;Tenasserim;Tenasserim;;Tenasserim;;;;;;;;;
 BUR_1339;Kachin;Kachin;Kachin;;Kachin;;;;;;;;;
-BUR_1330;Pegu;Pegu;Pegu;;Pegu;;;;;;;;;
+BUR_1330;Dala;Dala;Dala;;Dala;;;;;;;;;
+BUR_1337;Pagan;Pagan;Pagan;Pagan;;;;;;;;;
 NEP_1327;Himalayas;Himalayas;Himalaya;;Himalayas;;;;;;;;;
 ENG_1247;Bihar;Bihar;Bihar;;Bihar;;;;;;;;;
 ENG_1261;Orissa;Orissa;Orissa;;Orissa;;;;;;;;;
