--- a/KOS/localisation/text.csv
+++ b/KOS/localisation/text.csv
@@ -742,7 +742,7 @@ MAD;Madagascar;Madagascar;Madagaskar;;Madagascar;;;;;;;;;
 JAP;Japan;Japon;Japan;;Japón;;;;;;;;;
 TIB;Tibet;Tibet;Tibet;;Tíbet;;;;;;;;;
 SIA;Siam;Siam;Siam;;Siam;;;;;;;;;
-BUR;Burma;Birmanie;Burma;;Birmania;;;;;;;;;
+BUR;Pagan Empire;Pagan Empire;Pagan Empire;;Pagan Empire;;;;;;;;;
 BRU;Brunei;Brunei;Brunei;;Brunei;;;;;;;;;
 BAL;Bali;Bali;Bali;;Bali;;;;;;;;;
 JAV;Java;Java;Java;;Java;;;;;;;;;
@@ -9656,22 +9656,22 @@ PROV1326;Katmandu;Katmandou;Katmandu;;Katmandu;;;;;;;;;
 PROV1327;Jumla;Jumla;Jumla;;Jumla;;;;;;;;;
 PROV1328;Tumlong;Tumlong;Tumlong;;Tumlong;;;;;;;;;
 PROV1329;Thimpu;Thimpu;Thimpu;;Thimpu;;;;;;;;;
-PROV1330;Rangoon;Rangoon;Rangoon;;Rangún;;;;;;;;;
+PROV1330;Dala;Dala;Dala;;Dala;;;;;;;;;
 PROV1331;Bassein;Bassein;Bassein;;Bassein;;;;;;;;;
-PROV1332;Pegu;Pegu;Pegu;;Pegu;;;;;;;;;
+PROV1332;Bago;Bago;Bago;;Bago;;;;;;;;;
 PROV1333;Toungoo;Toungoo;Toungoo;;Toungoo;;;;;;;;;
-PROV1334;Ava;Ava;Ava;;Ava;;;;;;;;;
+PROV1334;Tagaung;Tagaung;Tagaung;;Tagaung;;;;;;;;;
 PROV1335;Kyaukse;Kyaukse;Kyaukse;;Kyaukse;;;;;;;;;
-PROV1336;Magwe;Magwe;Magwe;;Magwe;;;;;;;;;
-PROV1337;Prome;Prome;Prome;;Py?;;;;;;;;
+PROV1336;Pagan;Pagan;Pagan;;Pagan;;;;;;;;;
+PROV1337;Prome;Prome;Prome;;Prome;;;;;;;;
 PROV1338;Taunggyi;Taunggyi;Taunggyi;;Taunggyi;;;;;;;;;
-PROV1339;Haka;Haka;Haka;;Haka;;;;;;;;;
+PROV1339;South Sagaing;South Sagaing;South Sagaing;;South Sagaing;;;;;;;;;
 PROV1340;Lashio;Lashio;Lashio;;Lashio;;;;;;;;;
 PROV1341;Putao;Putao;Putao;;Putao;;;;;;;;;
-PROV1342;Myitkyina;Myitkyina;Myitkyina;;Myitkyin?;;;;;;;;
+PROV1342;North Sagaing;North Sagaing;North Sagaing;;North Sagaing;;;;;;;;
 PROV1343;Moulmein;Moulmein;Moulmein;;Moulmein;;;;;;;;;
 PROV1344;Mergui;Mergui;Mergui;;Mergui;;;;;;;;;
-PROV1345;Sittwe;Sittwe;Sittwe;;Sittwe;;;;;;;;;
+PROV1345;Arakan;Arakan;Arakan;;Arakan;;;;;;;;;
 PROV1346;Bangkok;Bangkok;Bangkok;;Bangkok;;;;;;;;;
 PROV1347;Lopburi;Lopburi;Lopburi;;Lopburi;;;;;;;;;
 PROV1348;Nakhon Sawan;Nakhon Sawan;Nakhon Sawan;;Najon Sawan;;;;;;;;;
@@ -9681,7 +9681,7 @@ PROV1351;Prachinburi;Prachinburi;Prachinburi;;Prachinburi;;;;;;;;;
 PROV1352;Phuket;Phuket;Phuket;;Phuket;;;;;;;;;
 PROV1353;Ratchaburi;Ratchaburi;Ratchaburi;;Ratchaburi;;;;;;;;;
 PROV1354;Nakhon Si Thammarat;Nakhon Si Thammarat;Nakhon Si Thammarat;;Nakhon Si Thammarat;;;;;;;;;
-PROV1355;Chiang Mai;Chiang Mai;Chiang Mai;;Chiang Mai;;;;;;;;;
+PROV1355;Haripunchai;Haripunchai;Haripunchai;;Haripunchai;;;;;;;;;
 PROV1356;Luang Prabang;Luang Prabang;Luang Prabang;;Luang Prabang;;;;;;;;;
 PROV1357;Vientiane;Vientiane;Vientiane;;Vientián;;;;;;;;;
 PROV1358;Udon Thani;Udon Thani;Udon Thani;;Udon Thani;;;;;;;;;
