--- a/KOS/localisation/PDM_CE.csv
+++ b/KOS/localisation/PDM_CE.csv
@@ -157,12 +157,12 @@ PROV660;Szentgyoergy;;;;;;;;;;;;;
 PROV661;Beszterce;;;;;;;;;;;;;
 PROV694;Thorn;;;;;;;;;;;;;
 PROV701;Gnesen;;;;;;;;;;;;;
-PROV767;Marburg;;;;;;;;;;;;;
-PROV768;Laibach;;;;;;;;;;;;;
+PROV767;Végvár;;;;;;;;;;;;;
+PROV768;Bájoshely;;;;;;;;;;;;;
 PROV772;Arad;;;;;;;;;;;;;
 PROV792;Pancsova;;;;;;;;;;;;;
-PROV951;Stryj;;;;;;;;;;;;;
-PROV953;Stanislawow;;;;;;;;;;;;;
+PROV951;Folyóvár;;;;;;;;;;;;;
+PROV953;Varjakvár;;;;;;;;;;;;;
 PROV980;Lugansk;;;;;;;;;;;;;
 PROV984;Kem;;;;;;;;;;;;;
 PROV988;Pudozh;;;;;;;;;;;;;
