--- a/KOS/localisation/ooselid_countries.csv
+++ b/KOS/localisation/ooselid_countries.csv
@@ -44,8 +44,8 @@ SZA;Szaszok;x;;;;
 SZA_ADJ;Cuman;x;;;;
 HLC;Halics;x;;;;
 HLC_ADJ;Halicsiai;x;;;;
-LDM;Lodomeria;x;;;;
-LDM_ADJ;Lodomerian;x;;;;
+LDM;Vizselohorszag;x;;;;
+LDM_ADJ;Vizseloh;x;;;;
 HIS;Histria;x;;;;
 HIS_ADJ;Histri;x;;;;
 LBU;Liburnia;x;;;;
