added Mali Empire

--- a/KOS/localisation/00_HPM_countries.csv
+++ b/KOS/localisation/00_HPM_countries.csv
@@ -1512,6 +1512,9 @@ MLI_ADJ;Malian;;;;;;;;;;;;;
 MLI_absolute_monarchy;Mali Empire;;;;;;;;;;;;;
 MLI_prussian_constitutionalism;Mali Empire;;;;;;;;;;;;;
 MLI_hms_government;Mali Empire;;;;;;;;;;;;;
+MLI_constitutional_empire;Mali Empire;;;;;;;;;;;;;
+MLI_semi_constitutional_empire;Mali Empire;;;;;;;;;;;;;
+MLI_absolute_empire;Mali Empire;;;;;;;;;;;;;
 MLI_proletarian_dictatorship;Mali;;;;;;;;;;;;;
 MLI_liberal;African Regroupment Party;;;;;;;;;;;;;
 MLI_radical;Party for Unity, Democracy and Progress;;;;;;;;;;;;;
