Poland change + pop fix and localisation

--- a/KOS/localisation/000_persia_map.csv
+++ b/KOS/localisation/000_persia_map.csv
@@ -36,8 +36,8 @@ ENG_1825;Kamen;;;;;;;;;;;;;
 FRA_2406;Desolation Islands;;;;;;;;;;;;;
 PROV629;Pilsen;;;;;;;;;;;;;
 PROV630;Budweis;;;;;;;;;;;;;
-PROV631;Brunn;;;;;;;;;;;;;
-PROV632;Znaim;;;;;;;;;;;;;
+PROV631;Brno;;;;;;;;;;;;;
+PROV632;Olomouc;;;;;;;;;;;;;
 PROV637;Kassa;;;;;;;;;;;;;
 PROV657;Eperjes;;;;;;;;;;;;;
 PROV911;Bayir;;;;;;;;;;;;;
