--- a/KOS/localisation/00_HPM_map.csv
+++ b/KOS/localisation/00_HPM_map.csv
@@ -5,7 +5,7 @@ PROV3470;Ipsala;;;;;;;;;;;;;
 PROV3471;Saint-Palais;;;;;;;;;;;;;
 PROV3472;Bayonne;;;;;;;;;;;;;
 PROV3473;Aveiro;;;;;;;;;;;;;
-PROV3426;Znaim;;;;;;;;;;;;;
+PROV3426;Északihatár;;;;;;;;;;;;;
 PROV3427;Gori;;;;;;;;;;;;;
 PROV3428;Tuttul;;;;;;;;;;;;;
 PROV3429;Telavi;;;;;;;;;;;;;
@@ -87,7 +87,7 @@ PROV3367;Pechory;;;;;;;;;;;;;
 PROV3366;Telsiai;;;;;;;;;;;;;
 PROV3365;Neustadt;;;;;;;;;;;;;
 PROV3364;Sanmenwai;;;;;;;;;;;;;
-PROV3363;Kolin;;;;;;;;;;;;;
+PROV3363;Konin;;;;;;;;;;;;;
 PROV3362;Ifrin;;;;;;;;;;;;;
 PROV3361;Byblos;;;;;;;;;;;;;
 PROV3360;Joub Jannine;;;;;;;;;;;;;
@@ -207,14 +207,14 @@ PROV8;Kuala Kelantan;;;;;;;;;;;;;
 PROV10;San Khew Jong;;;;;;;;;;;;;
 PROV3275;Kapoea;;;;;;;;;;;;;
 PROV3276;Latogatold;;;;;;;;;;;;;
-PROV3277;Hultschin;;;;;;;;;;;;;
+PROV3277;Hlucin;;;;;;;;;;;;;
 PROV3278;Manifa;;;;;;;;;;;;;
 PROV3279;Mak'simiakert;;;;;;;;;;;;;
-PROV3281;Fraustadt;;;;;;;;;;;;;
+PROV3281;Wschowa;;;;;;;;;;;;;
 PROV3282;Muraszombat;;;;;;;;;;;;;
 PROV3283;Baranja;;;;;;;;;;;;;
 PROV3284;Môle St-Nicolas;;;;;;;;;;;;;
-PROV3285;Frauenstadt;;;;;;;;;;;;;
+PROV3285;Újpiaszc;;;;;;;;;;;;;
 PROV3287;Olivenza;;;;;;;;;;;;;
 PROV3288;Tarvis;;;;;;;;;;;;;
 PROV3289;Cakovec;;;;;;;;;;;;;
@@ -262,7 +262,10 @@ PROV1017;Oryol;;;;;;;;;;;;;
 PROV1008;Moskva;;;;;;;;;;;;;
 PROV372;København;;;;;;;;;;;;;
 PROV809;Sofiya;;;;;;;;;;;;;
-PROV619;Wien;;;;;;;;;;;;;
+PROV618;Siránkogázs;;;;;;;;;;;;
+PROV619;Kunságvár;;;;;;;;;;;;;
+PROV620;Bélavár;;;;;;;;;;;;
+PROV621;Szentszék;;;;;;;;;;;;
 RUS_958;Kyiv;;;;;;;;;;;;;
 PROV978;Kharkiv;;;;;;;;;;;;;
 PROV744;Firenze;;;;;;;;;;;;;
@@ -550,7 +553,7 @@ PROV1391;Kota Kubang Labu;;;;;;;;;;;;;
 PROV1382;Hà Tiên;;;;;;;;;;;;;
 RUS_1048;Circassia;;;;;;;;;;;;;
 PROV1049;Ubykhia;;;;;;;;;;;;;
-PROV689;Teschen;;;;;;;;;;;;;
+PROV689;Tesin;;;;;;;;;;;;;
 PROV1773;Saguia el-Hamra;;;;;;;;;;;;;
 PROV1178;Sana'a;;;;;;;;;;;;;
 PROV972;Yekaterinoslav;;;;;;;;;;;;;
@@ -638,6 +641,7 @@ AUS_657;Eastern Transylvania;;;;;;;;;;;;;
 MOL_676;Bessarabia;;;;;;;;;;;;;
 PRU_682;Schlesien;;;;;;;;;;;;;
 AUS_702;Galicia-Lodomeria;;;;;;;;;;;;;
+PROV616;Kiskasta;Kiskasta;Kiskasta;;Kiskasta;;;;;;;;
 PROV662;Csernovic;;;;;;;;;;;;;
 PROV663;Szucsvár;;;;;;;;;;;;;
 PROV665;Zsilvásárhely;;;;;;;;;;;;;
