--- a/KOS/localisation/PDM_CE.csv
+++ b/KOS/localisation/PDM_CE.csv
@@ -156,7 +156,7 @@ PROV659;Kronstadt;;;;;;;;;;;;;
 PROV660;Szentgyoergy;;;;;;;;;;;;;
 PROV661;Beszterce;;;;;;;;;;;;;
 PROV694;Thorn;;;;;;;;;;;;;
-PROV701;Gnesen;;;;;;;;;;;;;
+PROV701;Gniezno;;;;;;;;;;;;;
 PROV767;Végvár;;;;;;;;;;;;;
 PROV768;Bájoshely;;;;;;;;;;;;;
 PROV772;Arad;;;;;;;;;;;;;
@@ -177,7 +177,7 @@ PROV2533;Vasarhely;;;;;;;;;;;;;
 PROV2538;Ujvidek;;;;;;;;;;;;;
 PROV2557;Ribe;;;;;;;;;;;;;
 PROV2577;Debar;;;;;;;;;;;;;
-PROV2584;Bielitz;;;;;;;;;;;;;
+PROV2584;Fehérfol;;;;;;;;;;;;;
 PROV2636;Halmstad;;;;;;;;;;;;;
 rich_farmland;Rich Farmland;;;;;;;;;;;;;
 mountain_farmland;Terraced Farmland;Terres Arables en Terrasses;Terrassenkultur Ackerland;;Tierras de Cultivo de Bancal;;;;;;;;;
