--- a/KOS/localisation/text.csv
+++ b/KOS/localisation/text.csv
@@ -640,7 +640,7 @@ SLO;Slovenia;Slovénie;Slowenien;;Eslovenia;;;;;;;;
 AUS;Austria;Autriche;Österreich;;Austria;;;;;;;;
 BOH;Baumen;Beumen;Beumen;;Beumen;;;;;;;;
 DZG;Danzig;Dantzig;Danzig;;Danzig;;;;;;;;
-KRA;Wieslanie;Wieslanie;Wieslanie;;Wieslania;;;;;;;;
+KRA;Wislanie;Wislanie;Wislanie;;Wislanie;;;;;;;;
 CRI;Crimea;Crimée;Krim;;Crimea;;;;;;;;
 EST;Estonia;Estonie;Estland;;Estonia;;;;;;;;
 HUN;Hungary;Hongrie;Ungarn;;Hungría;;;;;;;;
@@ -939,7 +939,7 @@ JOH_ADJ;Johorian;Johorien;Johoriisch;;Johoriana;;;;;;;;
 KAS_ADJ;Kashmiri;Kashmiri;Kaschmirisch;;Kashmir?;;;;;;;;
 KHI_ADJ;Khivan;Khivien;Khivanisch;;Khivana;;;;;;;;
 KOK_ADJ;Kokandi;Kokandien;Kokandisch;;Kokand?;;;;;;;;
-KRA_ADJ;Wieslanian;Wieslanian;Wieslanian;;Wieslanian;;;;;;;;
+KRA_ADJ;Vistulan;Vistulan;Vistulan;;Vistulan;;;;;;;;
 KUT_ADJ;Kutchi;Kutchi;Kutchanisch;;Kutch?;;;;;;;;
 LAD_ADJ;Ladakhi;Ladakhien;Ladakhisch;;Ladakh?;;;;;;;;
 LIP_ADJ;Lippish;Lippien;Lippisch;;Lippish;;;;;;;;
@@ -9111,11 +9111,7 @@ PROV612;Innsbruck;Innsbruck;Innsbruck;;Innsbruck;;;;;;;;
 PROV613;Salzburg;Salzbourg;Salzburg;;Salzburgo;;;;;;;;
 PROV614;Bregenz;Bregenz;Bregenz;;Bregenz;;;;;;;;
 PROV615;Lienz;Lienz;Lienz;;Lienz;;;;;;;;
-PROV616;Graz;Graz;Graz;;Graz;;;;;;;;
-PROV617;Judenburg;Judenburg;Judenburg;;Judenburg;;;;;;;;
-PROV618;Klagenfurt;Klagenfurt;Klagenfurt;;Klagenfurt;;;;;;;;
-PROV620;Sankt Pölten;Sankt Pölten;Sankt Polten;;Sankt Polten;;;;;;;;
-PROV621;Krems;Krems;Krems;;Krems;;;;;;;;
+PROV617;Szerethely;Szerethely;Szerethely;;Szerethely;;;;;;;;
 PROV622;Linz;Linz;Linz;;Linz;;;;;;;;
 PROV623;Sopron;Sopron;Sopron;;Sopron;;;;;;;;
 PROV624;Eisenstadt;Eisenstadt;Eisenstadt;;Eisenstadt;;;;;;;;
@@ -9151,11 +9147,11 @@ PROV678;Izmail;Izmail;Izmail;;Izmail;;;;;;;;
 PROV679;Kolberg;Kolberg;Kolberg;;Kolberg;;;;;;;;
 PROV680;Köslin;Koszalin;Koslin;;Koslin;;;;;;;;
 PROV681;Küstrin;Küstrin;Küstrin;;Kustrin;;;;;;;;
-PROV682;Breslau;Breslau;Breslau;;Wroclaw;;;;;;;;
-PROV684;Oppeln;Oppeln;Oppeln;;Oppeln;;;;;;;;
+PROV682;Wroclaw;Wroclaw;Wroclaw;;Wroclaw;;;;;;;;
+PROV684;Opole;Opole;Opole;;Opole;;;;;;;;
 PROV685;Kattowitz;Katowice;Kattowitz;;Katowice;;;;;;;;
 PROV687;Görlitz;Görlitz;Görlitz;;Gorlitz;;;;;;;;
-PROV688;Troppau;Troppau;Troppau;;Truppach;;;;;;;;
+PROV688;Opava;Opava;Opava;;Opava;;;;;;;;
 PROV690;Danzig;Dantzig;Danzig;;Danzig;;;;;;;;
 PROV691;Tuchel;Tuchel;Tuchel;;Tuchel;;;;;;;;
 PROV692;Deutsch Krone;Deutsch Krone;Deutsch Krone;;Deutsch-Krone;;;;;;;;
@@ -9164,8 +9160,8 @@ PROV695;Königsberg;Königsberg;Königsberg;;Königsberg;;;;;;;;
 PROV696;Allenstein;Allenstein;Allenstein;;Allenstein;;;;;;;;
 PROV697;Gumbinnen;Gumbinnen;Gumbinnen;;Gumbinnen;;;;;;;;
 PROV698;Memel;Memel;Memel;;Memel;;;;;;;;
-PROV699;Posen;Posnanie;Posen;;Poznán;;;;;;;;
-PROV700;Bromberg;Bromberg;Bromberg;;Bromberg;;;;;;;;
+PROV699;Poznan;Poznan;Poznan;;Poznan;;;;;;;;
+PROV700;Bydgoszcz;Bydgoszcz;Bydgoszcz;;Bydgoszcz;;;;;;;;
 PROV703;Krakow;Cracovie;Krakau;;Cracovia;;;;;;;;
 PROV705;Przemysl;Przemysl;Przemysl;;Przemysl;;;;;;;;
 PROV706;Warsaw;Varsovie;Warschau;;Varsovia;;;;;;;;
