added Ariania and Marmarica

--- a/KOS/localisation/ooselid_countries.csv
+++ b/KOS/localisation/ooselid_countries.csv
@@ -227,6 +227,10 @@ OLA;Oland;x;;;;
 OLA_ADJ;Olander;x;;;;
 SCN;Skane;x;;;;
 SCN_ADJ;Skansk;x;;;;
+MRM;Marmarica;x;;;;
+MRM_ADJ;Marmariki;x;;;;
+ARI;Ariania;x;;;;
+ARI_ADJ;Arianite;x;;;;
 OOS_conservative;Konstitutsionalistid Kliik;x;;;;
 OOS_liberal;Hyvinvointi Parteix;;;;
 OOS_reactionary;Ehejumalikunig Kildkond;x;;;;
