north africa pops + a few changes (country colours etc)

--- a/KOS/localisation/ooselid_countries.csv
+++ b/KOS/localisation/ooselid_countries.csv
@@ -594,6 +594,7 @@ hewbyot;Hewbyot;x;;;;
 skansk;Skansk;x;;;;
 vinlandic;Vinlandic;x;;;;
 kvaani;Kvaani;x;;;;
+siwa;Siwa;x;;;;
 ooselid_pantheon;Ooselid Pantheon;x;;;;
 ooselskia;Ooselskia;x;;;;
 modern_pagan;Modern Paganism;x;;;;
