Mexico initial setup

--- a/KOS/localisation/00_HPM_map.csv
+++ b/KOS/localisation/00_HPM_map.csv
@@ -22,7 +22,7 @@ PROV3439;Feodosia;;;;;;;;;;;;;
 PROV3440;Yanbian;;;;;;;;;;;;;
 PROV3441;Gazli;;;;;;;;;;;;;
 PROV3442;Darvaza;;;;;;;;;;;;;
-PROV858;Corlu;;;;;;;;;;;;;
+PROV858;Tlaxcallan;;;;;;;;;;;;;
 PROV3425;Altenburg;;;;;;;;;;;;;
 PROV3424;Salacgriva;;;;;;;;;;;;;
 PROV3423;Domesnes;;;;;;;;;;;;;
@@ -35,7 +35,7 @@ PROV3417;Weststernberg;;;;;;;;;;;;;
 PROV3416;Bautzen;;;;;;;;;;;;;
 PROV398;Bastogne;;;;;;;;;;;;;
 PROV3403;Barahona;;;;;;;;;;;;;
-PROV3402;Comitan;;;;;;;;;;;;;
+PROV3402;Chiappan;;;;;;;;;;;;;
 PROV3401;Fraga;;;;;;;;;;;;;
 PROV3400;Braganca;;;;;;;;;;;;;
 PROV3399;Versailles;;;;;;;;;;;;;
@@ -53,7 +53,7 @@ PROV3407;Amara;;;;;;;;;;;;;
 PROV3408;Cherbourg;;;;;;;;;;;;;
 PROV3409;Thionville;;;;;;;;;;;;;
 PROV3410;Morales;;;;;;;;;;;;;
-PROV3411;Navassa Island;;;;;;;;;;;;;
+PROV3411;Teotitlan;;;;;;;;;;;;;
 PROV3412;Jan Mayen;;;;;;;;;;;;;
 PROV3413;South China Islands;;;;;;;;;;;;;
 PROV3414;Port-aux-Français;;;;;;;;;;;;;
@@ -131,7 +131,7 @@ PROV3323;Kefelong;;;;;;;;;;;;;
 PROV3322;Lopner;;;;;;;;;;;;;
 PROV3321;Tomurlik;;;;;;;;;;;;;
 PROV3320;Jeremie;;;;;;;;;;;;;
-PROV3319;Jamel;;;;;;;;;;;;;
+PROV3319;Coatlicamac;;;;;;;;;;;;;
 PROV3318;Orava;;;;;;;;;;;;;
 PROV3317;Lausanne;;;;;;;;;;;;;
 PROV3316;Zakatata;;;;;;;;;;;;;
@@ -141,7 +141,7 @@ PROV3313;Gap;;;;;;;;;;;;;
 PROV3312;Lons;;;;;;;;;;;;;
 PROV3311;Blue Ridge;;;;;;;;;;;;;
 PROV3310;Huntsville;;;;;;;;;;;;;
-PROV3309;Hinche;;;;;;;;;;;;;
+PROV3309;Tetellan;;;;;;;;;;;;;
 PROV3308;Shupenze;;;;;;;;;;;;;
 PROV3307;Korce;;;;;;;;;;;;;
 PROV3306;Metsovo;;;;;;;;;;;;;
@@ -213,7 +213,7 @@ PROV3279;Mak'simiakert;;;;;;;;;;;;;
 PROV3281;Wschowa;;;;;;;;;;;;;
 PROV3282;Muraszombat;;;;;;;;;;;;;
 PROV3283;Baranja;;;;;;;;;;;;;
-PROV3284;Môle St-Nicolas;;;;;;;;;;;;;
+PROV3284;Tehuantepec;;;;;;;;;;;;;
 PROV3285;Újpiaszc;;;;;;;;;;;;;
 PROV3287;Olivenza;;;;;;;;;;;;;
 PROV3288;Tarvis;;;;;;;;;;;;;
@@ -252,7 +252,7 @@ FRA_406;Champagne;;;;;;;;;;;;;
 PROV3263;Fort William;;;;;;;;;;;;;
 PROV3264;Nicobar Islands;;;;;;;;;;;;;
 PROV861;Scutari;;;;;;;;;;;;;
-PROV828;Adrianople;;;;;;;;;;;;;
+PROV828;Chalchihuitl;;;;;;;;;;;;;
 PROV860;Kostantiniye;;;;;;;;;;;;;
 PROV869;Smyrna;;;;;;;;;;;;;
 RUS_1008;Moskva;;;;;;;;;;;;;
@@ -608,7 +608,7 @@ PROV17;Stikine;;;;;;;;;;;;;
 CAN_19;New Caledonia;;;;;;;;;;;;;
 PROV20;Okanagan;;;;;;;;;;;;;
 PROV21;Kootenay;;;;;;;;;;;;;
-PROV44;Guantanamo Bay;;;;;;;;;;;;;
+PROV44;Tecpantepec;;;;;;;;;;;;;
 CAN_46;Upper Canada;;;;;;;;;;;;;
 CAN_50;Northern Ontario;;;;;;;;;;;;;
 CAN_58;Lower Canada;;;;;;;;;;;;;
@@ -812,7 +812,7 @@ ENG_2074;Bechuanaland;;;;;;;;;;;;;
 ENG_2094;Griqualand West;;;;;;;;;;;;;
 PROV2124;Maore;;;;;;;;;;;;;
 MEX_2149;Cohauila;;;;;;;;;;;;;
-MEX_2159;Veracruz;;;;;;;;;;;;;
+MEX_2159;Cempohuallan;;;;;;;;;;;;;
 MEX_2161;Jalisco;;;;;;;;;;;;;
 MEX_2170;Guerrero;;;;;;;;;;;;;
 MEX_2172;México;;;;;;;;;;;;;
@@ -897,8 +897,8 @@ PROV109;Aspen;;;;;;;;;;;;;
 PROV105;Santa Fe;;;;;;;;;;;;;
 PROV218;Wheeling;;;;;;;;;;;;;
 PROV217;Green Bank;;;;;;;;;;;;;
-PROV2187;La Mesilla;;;;;;;;;;;;;
-PROV2628;Ocos;;;;;;;;;;;;;
+PROV2187;Qumarqaj;;;;;;;;;;;;;
+PROV2628;Iximche;;;;;;;;;;;;;
 BAV_601;Niederbayern;;;;;;;;;;;;;
 PROV3249;Old Tianjin;;;;;;;;;;;;;
 PROV606;Luzern;;;;;;;;;;;;;
@@ -921,7 +921,7 @@ PROV3256;Sondershausen;;;;;;;;;;;;;
 PROV3257;Waldeck;;;;;;;;;;;;;
 PROV60;Richmond;;;;;;;;;;;;;
 PROV211;Lynchburg;;;;;;;;;;;;;
-PROV2186;Guatemala City;;;;;;;;;;;;;
+PROV2186;Chiya;;;;;;;;;;;;;
 PROV14;Victoria;;;;;;;;;;;;;
 PROV3259;Jadegebiet;;;;;;;;;;;;;
 east_africa;East Africa;;;;;;;;;;;;;
