--- a/KOS/localisation/text.csv
+++ b/KOS/localisation/text.csv
@@ -753,13 +753,13 @@ CAN;Canada;Canada;Kanada;;Canad?;;;;;;;;
 TEX;Texas;Texas;Texas;;Texas;;;;;;;;
 COL;Columbia;Colombie;Columbia;;Columbia;;;;;;;;
 NEN;New England;Nouvelle-Angleterre;Neuengland;;Nueva Inglaterra;;;;;;;;
-MEX;Mexico;Mexique;Mexiko;;México;;;;;;;;
+MEX;Mexihco Tlahtoloyan;Mexique;Mexiko;;México;;;;;;;;
 CUB;Cuba;Cuba;Kuba;;Cuba;;;;;;;;
 DOM;Dominican Republic;République dominicaine;Dominikanische Republik;;Rep Dominicana;;;;;;;;
 PNM;Panama;Panama;Panama;;Panam?;;;;;;;;
 HON;Honduras;Honduras;Honduras;;Honduras;;;;;;;;
-ELS;El Salvador;Salvador;El Salvador;;El Salvador;;;;;;;;
-GUA;Guatemala;Guatemala;Guatemala;;Guatemala;;;;;;;;
+ELS;Kuskatan;Salvador;El Salvador;;El Salvador;;;;;;;;
+GUA;Qumarkaj;Guatemala;Guatemala;;Guatemala;;;;;;;;
 NIC;Nicaragua;Nicaragua;Nicaragua;;Nicaragua;;;;;;;;
 COS;Costa Rica;Costa Rica;Costa Rica;;Costa Rica;;;;;;;;
 DES;Deseret;Deseret;Dischret;;Deseret;;;;;;;;
@@ -9268,7 +9268,7 @@ PROV824;Janina;Ioannina;Janina;;Janina;;;;;;;;
 PROV825;Arta;Arta;Arta;;Arta;;;;;;;;
 PROV826;Corfu;Corfou;Korfu;;Corf?;;;;;;;;
 PROV827;Zante;Zante;Zante;;Zante;;;;;;;;
-PROV830;Dedeagatch;Dedeagatch;Dedeagatch;;Dedeagatch;;;;;;;;
+PROV830;Xilotepec;Dedeagatch;Dedeagatch;;Dedeagatch;;;;;;;;
 PROV831;Larissa;Larisa;Larisa;;Larisa;;;;;;;;
 PROV832;Volos;Volos;Volos;;Vólos;;;;;;;;
 PROV833;Trikkala;Trikala;Trikkala;;Trikkala;;;;;;;;
@@ -10298,50 +10298,50 @@ PROV2139;Rosarito;Rosarito;Rosarito;;Rosarito;;;;;;;;
 PROV2141;Guaymas;Guaymas;Guaymas;;Guaymas;;;;;;;;
 PROV2142;Chihuahua;Chihuahua;Chihuahua;;Chihuahua;;;;;;;;
 PROV2144;Delicias;Delicias;Delicias;;Delicias;;;;;;;;
-PROV2145;Parral;Parral;Parral;;Parral;;;;;;;;
+PROV2145;Ometepetl;Parral;Parral;;Parral;;;;;;;;
 PROV2149;Matamoros;Matamoros;Matamoros;;Matamoros;;;;;;;;
-PROV2150;Ciudad Victoria;Ciudad Victoria;Ciudad Victoria;;Ciudad Victoria;;;;;;;;
-PROV2151;Saltillo;Saltillo;Saltillo;;Saltillo;;;;;;;;
+PROV2150;Axalpan;Ciudad Victoria;Ciudad Victoria;;Ciudad Victoria;;;;;;;;
+PROV2151;Xalco;Saltillo;Saltillo;;Saltillo;;;;;;;;
 PROV2152;Monclova;Monclova;Monclova;;Monclova;;;;;;;;
-PROV2153;Durango;Durango;Durango;;Durango;;;;;;;;
-PROV2154;Santa María del Oro;Santa Maria del Oro;Santa Maria del Oro;;Santa Maria del Oro;;;;;;;;
-PROV2155;Torreón;Torreón;Torreon;;Torreón;;;;;;;;
-PROV2156;Mazatlán;Mazatlán;Mazatlan;;Mazatlán;;;;;;;;
-PROV2157;Culiacán;Culiacán;Culiacan;;Culiacán;;;;;;;;
-PROV2158;Zacatecas;Zacatecas;Zacatecas;;Zacatecas;;;;;;;;
-PROV2159;San Luis Potos?San Luis Potosi;San Luis Potosi;;San Luis Potos?;;;;;;;;;
-PROV2160;Aguascalientes;Aguascalientes;Aguascalientes;;Aguascalientes;;;;;;;;
-PROV2161;Tepic;Tepic;Tepic;;Tepic;;;;;;;;
-PROV2162;Veracruz;Veracruz;Veracruz;;Veracruz;;;;;;;;
-PROV2163;Tampico;Tampico;Tampico;;Tampico;;;;;;;;
-PROV2164;Minatitlán;Minatitlán;Minatitlan;;Minatitlán;;;;;;;;
+PROV2153;Coyohuacan;Durango;Durango;;Durango;;;;;;;;
+PROV2154;Xocohtepec;Santa Maria del Oro;Santa Maria del Oro;;Santa Maria del Oro;;;;;;;;
+PROV2155;Tzompanco;Torreón;Torreon;;Torreón;;;;;;;;
+PROV2156;Mazatlan;Mazatlán;Mazatlan;;Mazatlán;;;;;;;;
+PROV2157;Yaquitlan;Culiacán;Culiacan;;Culiacán;;;;;;;;
+PROV2158;Tlalnepantla;Zacatecas;Zacatecas;;Zacatecas;;;;;;;;
+PROV2159;Xochitepec;San Luis Potosi;San Luis Potosi;;San Luis Potos?;;;;;;;;;
+PROV2160;Apetatitlan;Aguascalientes;Aguascalientes;;Aguascalientes;;;;;;;;
+PROV2161;Xalisco;Tepic;Tepic;;Tepic;;;;;;;;
+PROV2162;Macuiltepetl;Macuiltepetl;Veracruz;;Veracruz;;;;;;;;
+PROV2163;Oxitipan;Tampico;Tampico;;Tampico;;;;;;;;
+PROV2164;Cuetlaxtlan;Minatitlán;Minatitlan;;Minatitlán;;;;;;;;
 PROV2165;Villahermosa;Villahermosa;Villahermosa;;Villahermosa;;;;;;;;
-PROV2166;Guadalajara;Guadalajara;Guadalajara;;Guadalajara;;;;;;;;
-PROV2167;Guanajuato;Guanajuato;Guanajuato;;Guanajuato;;;;;;;;
-PROV2168;Puerto Vallarta;Puerto Vallarta;Puerto Vallarta;;Puerto Vallarta;;;;;;;;
-PROV2169;Colima;Colima;Colima;;Colima;;;;;;;;
-PROV2170;Morelia;Morelia;Morelia;;Morelia;;;;;;;;
-PROV2172;Mexico City;Mexico;Mexico City;;Ciudad de México;;;;;;;;
-PROV2173;Querétaro;Querétaro;Queretaro;;Queretaro;;;;;;;;
-PROV2174;Toluca;Toluca;Toluca;;Toluca;;;;;;;;
-PROV2175;Tulancingo;Tulancingo;Tulancingo;;Tulancingo;;;;;;;;
-PROV2176;Puebla;Puebla;Puebla;;Puebla;;;;;;;;
-PROV2177;Oaxaca;Oaxaca;Oaxaca;;Oaxaca;;;;;;;;
-PROV2178;Collataro;Collataro;Collataro;;Collataro;;;;;;;;
-PROV2179;Acapulco;Acapulco;Acapulco;;Acapulco;;;;;;;;
-PROV2180;Chilpancingo;Chilpancingo;Chilpancingo;;Chilpancingo;;;;;;;;
+PROV2166;Nochistlan;Guadalajara;Guadalajara;;Guadalajara;;;;;;;;
+PROV2167;Chupicuaro;Guanajuato;Guanajuato;;Guanajuato;;;;;;;;
+PROV2168;Amaxocotlan;Puerto Vallarta;Puerto Vallarta;;Puerto Vallarta;;;;;;;;
+PROV2169;Tomatlan;Colima;Colima;;Colima;;;;;;;;
+PROV2170;Tzintzuntzan;Morelia;Morelia;;Morelia;;;;;;;;
+PROV2172;Tenochtitlan;Mexico;Mexico City;;Ciudad de México;;;;;;;;
+PROV2173;Cimapan;Querétaro;Queretaro;;Queretaro;;;;;;;;
+PROV2174;Tollocan;Toluca;Toluca;;Toluca;;;;;;;;
+PROV2175;Axocopan;Tulancingo;Tulancingo;;Tulancingo;;;;;;;;
+PROV2176;Huaxtepec;Puebla;Puebla;;Puebla;;;;;;;;
+PROV2177;Huaxcayac;Oaxaca;Oaxaca;;Oaxaca;;;;;;;;
+PROV2178;Miahuatlan;Collataro;Collataro;;Collataro;;;;;;;;
+PROV2179;Tototepec;Acapulco;Acapulco;;Acapulco;;;;;;;;
+PROV2180;Tecomaixtlahuacan;Chilpancingo;Chilpancingo;;Chilpancingo;;;;;;;;
 PROV2181;Tuxtla;Tuxtla;Tuxtla;;Tuxtla;;;;;;;;
-PROV2182;Tapachula;Tapachula;Tapachula;;Tapachula;;;;;;;;
-PROV2183;Mérida;Merida;Merida;;Mérida;;;;;;;;
-PROV2184;Campeche;Campeche;Campeche;;Campeche;;;;;;;;
-PROV2185;Bacalar;Bacalar;Bacalar;;Bacalar;;;;;;;;
-PROV2188;Puerto Barrios;Puerto Barrios;Puerto Barrios;;Puerto Barrios;;;;;;;;
-PROV2189;Sayaxch?Sayaxche;Sayaxche;;Sayaxche;;;;;;;;;
-PROV2190;Belize;Belize;Belize;;Belice;;;;;;;;
-PROV2191;San Salvador;San Salvador;San Salvador;;San Salvador;;;;;;;;
-PROV2192;San Miguel;San Miguel;San Miguel;;San Miguel;;;;;;;;
+PROV2182;Xoconochco;Tapachula;Tapachula;;Tapachula;;;;;;;;
+PROV2183;Tsiibil Chaaltun;Merida;Merida;;Mérida;;;;;;;;
+PROV2184;Kaan Peech;Campeche;Campeche;;Campeche;;;;;;;;
+PROV2185;Tulu'um;Bacalar;Bacalar;;Bacalar;;;;;;;;
+PROV2188;Kaminaljuyu;Puerto Barrios;Puerto Barrios;;Puerto Barrios;;;;;;;;
+PROV2189;Noj Peten;Sayaxche;Sayaxche;;Sayaxche;;;;;;;;;
+PROV2190;Altun-Ha;Belize;Belize;;Belice;;;;;;;;
+PROV2191;Kuskatan;San Salvador;San Salvador;;San Salvador;;;;;;;;
+PROV2192;Chorotega;San Miguel;San Miguel;;San Miguel;;;;;;;;
 PROV2193;Comayagua;Comayagua;Comayagua;;Comayagua;;;;;;;;
-PROV2194;San Pedro Sula;San Pedro Sula;San Pedro Sula;;San Pedro Sula;;;;;;;;
+PROV2194;Lamani;San Pedro Sula;San Pedro Sula;;San Pedro Sula;;;;;;;;
 PROV2195;La Ceiba;La Ceiba;La Ceiba;;La Ceiba;;;;;;;;
 PROV2197;Managua;Managua;Managua;;Managua;;;;;;;;
 PROV2198;Rivas;Rivas;Rivas;;Rivas;;;;;;;;
@@ -10364,7 +10364,7 @@ PROV2214;Santo Domingo;Santo Domingo;Santo Domingo;;Santo Domingo;;;;;;;;
 PROV2215;Cap Haitien;Cap-Haïtien;Cap Haitien;;Cap Haitien;;;;;;;;
 PROV2216;La Vega;La Vega;La Vega;;La Vega;;;;;;;;
 PROV2217;Jamaica;Jamaïque;Jamaica;;Jamaica;;;;;;;;
-PROV2218;Cayman Islands;Îles Caïman;Cayman-Inseln;;Islas Caimanes;;;;;;;;
+PROV2218;Atlxochitlan;Îles Caïman;Cayman-Inseln;;Islas Caimanes;;;;;;;;
 PROV2219;Bahamas;Bahamas;Bahamas;;Bahamas;;;;;;;;
 PROV2221;Nanjing;Nanjing;Nanjing;;Nanjing;;;;;;;;
 PROV2222;Puerto Rico;Puerto Rico;Puerto Rico;;Puerto Rico;;;;;;;;
