--- a/KOS/localisation/00_HPM_countries.csv
+++ b/KOS/localisation/00_HPM_countries.csv
@@ -1706,8 +1706,8 @@ NYE_ADJ;North Yemeni;;;;;;;;;;;;;
 NYE_theocracy;Zaydi;;;;;;;;;;;;;
 NYE_absolute_monarchy;Mutawakkilite Kingdom;;;;;;;;;;;;;
 NYE_absolute_monarchy_ADJ;Zaidiyyah;;;;;;;;;;;;;
-OAX;Oaxaca;;;;;;;;;;;;;
-OAX_ADJ;Oaxacan;;;;;;;;;;;;;
+OAX;Tototepec Altepetl;;;;;;;;;;;;;
+OAX_ADJ;Mixtec;;;;;;;;;;;;;
 OAX_conservative;Conservative Party;;;;;;;;;;;;;
 OAX_liberal;Liberal Party;;;;;;;;;;;;;
 OAX_reactionary;Nationalist Party;;;;;;;;;;;;;
@@ -1873,8 +1873,8 @@ RAJ_fascist_dictatorship;Rajasthan;;;;;;;;;;;;;
 RAJ_fascist_dictatorship_ADJ;Rajasthani;;;;;;;;;;;;;
 RAJ_parliamentary_republic;Rajasthan;;;;;;;;;;;;;
 RAJ_parliamentary_republic_ADJ;Rajasthani;;;;;;;;;;;;;
-RGR;Rio Grande;;;;;;;;;;;;;
-RGR_ADJ;Riograndese;;;;;;;;;;;;;
+RGR;Tlaxcalla Altepetl;;;;;;;;;;;;;
+RGR_ADJ;Tlaxcalla;;;;;;;;;;;;;
 RGR_conservative;Partido Conservador;Partido Conservador;Partido Conservador;;;;;;;;;;;
 RGR_liberal;Partido Liberal;Partido Liberal;Partido Liberal;;;;;;;;;;;
 RGR_radical;Partido Federalista;Partido Federalista;Partido Federalista;;;;;;;;;;;
@@ -2302,8 +2302,8 @@ TRE_radical;Radicali;Radicali;Radicali;;Radicali;;;;;;;;;
 TRE_fascist;Fascisti;Fascisti;Fascisti;;Fascisti;;;;;;;;;
 TRK;Truk;Truk;Truk;;;;;;;;;;;
 TRK_ADJ;Trukese;Trukese;Trukese;;;;;;;;;;;
-TRS;Tarasco;;;;;;;;;;;;;
-TRS_ADJ;Tarascan;;;;;;;;;;;;;
+TRS;Tzintzuntzan Altepetl;;;;;;;;;;;;;
+TRS_ADJ;Purepecha;;;;;;;;;;;;;
 VNR;Venezuelan Revolt;;;;;;;;;;;;;
 VNR_ADJ;Venezuelan;;;;;;;;;;;;;
 TTB;Trinidad & Tobago;Trinité & Tobago;Trinidad & Tobago;;Trinidad & Tobago;;;;;;;;;
@@ -2545,7 +2545,7 @@ YAK_fascist;The Nationalists;Faction fasciste;Die faschistische Fraktion;;;;;;;;
 YAP;Yap;Yap;Yap;;;;;;;;;;;
 YAP_ADJ;Yapese;Yapese;Yapese;;;;;;;;;;;
 YNN_presidential_dictatorship;Yunnan Clique;Clique de Yunnan;Yunnan-Clique;;;;;;;;;;;
-YUC;Yucatan;;;;;;;;;;;;;
+YUC;Noj Peten;;;;;;;;;;;;;
 YUC_ADJ;Yucatecan;;;;;;;;;;;;;
 YUC_conservative;Partido Conservador;Partido Conservador;Partido Conservador;;;;;;;;;;;
 YUC_liberal;Partido Liberal;Partido Liberal;Partido Liberal;;;;;;;;;;;
