--- a/KOS/localisation/Sitka.csv
+++ b/KOS/localisation/Sitka.csv
@@ -872,7 +872,7 @@ french_bagirmi_title;Establish a protectorate over Baguirmi;;;;;;;;;;;;;
 french_bagirmi_desc;Seeing the conquest of its neighbors, the Sultan of Baguirmi has sought to be peacefully protected by France to avoid bloodshed and be shielded from raiders.;;;;;;;;;;;;;
 invade_nye_title;The Yemeni Expedition;;;;;;;;;;;;;
 invade_nye_desc;Local Zaidi nobles who are irritated by the alleged incompetence of the Zaidi imam have invited us to depose him and integrate the Imamate of Zaydi into the Ottoman Empire.;;;;;;;;;;;;;
-PROV2165;San Juan Bautista;San Juan Bautista;San Juan Bautista;;San Juan Bautista;;;;;;;;;
+PROV2165;Xicallanco;San Juan Bautista;San Juan Bautista;;San Juan Bautista;;;;;;;;;
 sudeten_treaty_title;The Sudeten Treaty;;;;;;;;;;;;;
 sudeten_treaty_desc;Our recent acquisition of the Sudetenland has brought a dispute with the former owners and an unadministrable and undefendable panhandle into their territory. Our ministers propose we return said panhandle to them with a mutual agreement on those borders as final.;;;;;;;;;;;;;
 form_bnf_title;Reunite with the Dutch;;;;;;;;;;;;;
