Phoenica&colonies pops + small fixes

--- a/KOS/localisation/ooselid_countries.csv
+++ b/KOS/localisation/ooselid_countries.csv
@@ -595,6 +595,7 @@ skansk;Skansk;x;;;;
 vinlandic;Vinlandic;x;;;;
 kvaani;Kvaani;x;;;;
 siwa;Siwa;x;;;;
+afro_phoenician;Afro-Phoenician;x;;;;
 ooselid_pantheon;Ooselid Pantheon;x;;;;
 ooselskia;Ooselskia;x;;;;
 modern_pagan;Modern Paganism;x;;;;
