New Mali Vassals and several changes in Africa

--- a/KOS/localisation/00_HPM_countries.csv
+++ b/KOS/localisation/00_HPM_countries.csv
@@ -2588,7 +2588,7 @@ ARO_presidential_dictatorship;Biafra;Biafra;Biafra;;Biafra;;;;;;;;;
 ARO_presidential_dictatorship_ADJ;Biafran;Biafraise;Biafran;;biafreño;;;;;;;;;
 ARO_democracy;Biafra;Biafra;Biafra;;Biafra;;;;;;;;;
 ARO_democracy_ADJ;Biafran;Biafraise;Biafran;;biafreño;;;;;;;;;
-ASH;Ashanti;Ashanti;Aschanti;;Asantia;;;;;;;;;
+ASH;Ashanti Confederacy;Ashanti Confederacy;Aschanti Confederacy;;Asantia Confederacy;;;;;;;;;
 ASH_ADJ;Ashanti;Ashanti;Aschanti;;;;;;;;;;;
 ASH_conservative;Royal Faction;Faction royale;Königsfraktion;;;;;;;;;;;
 ASH_liberal;Reform Faction;Faction de réforme;Verbesserung Fraktion;;;;;;;;;;;
@@ -2770,8 +2770,8 @@ KBO_radical;Freedom Faction;Faction de liberté;Freiheits Fraktion;;;;;;;;;;;
 KBO_socialist;People's welfare Faction;Faction du bien-être populaire;Volksbetreuungsamt Fraktion;;;;;;;;;;;
 KBO_communist;Communist Faction;Faction communiste;Die kommunistische Fraktion;;;;;;;;;;;
 KBO_fascist;Greater Kanem-Bornu Faction;Faction du Grand Empire du Kanem-Bornou;Großer Kanem-Bornu ReichFraktion;;;;;;;;;;;
-KNG;Wattara;Ouattara;Wattara;;Wattara;;;;;;;;;
-KNG_ADJ;Wattaran;Wattaran;Wattaran;;;;;;;;;;;
+KNG;Kong Kingdom;Kong Kingdom;Kong Kingdom;;Kong Kingdom;;;;;;;;;
+KNG_ADJ;Kong;Kong;Kong;;;;;;;;;;;
 KNG_conservative;Fama's Faction;Faction Fama;Fama Fraktion;;;;;;;;;;;
 KNG_liberal;Liberal Faction;Faction libérale;Die liberale Fraktion;;;;;;;;;;;
 KNG_reactionary;Religious Faction;Religieux Faction;Religiöse Fraktion;;;;;;;;;;;
