mexico regions, corrected & new names, further position correcting, mayan capitals

--- a/KOS/localisation/00_HPM_map.csv
+++ b/KOS/localisation/00_HPM_map.csv
@@ -141,7 +141,7 @@ PROV3313;Gap;;;;;;;;;;;;;
 PROV3312;Lons;;;;;;;;;;;;;
 PROV3311;Blue Ridge;;;;;;;;;;;;;
 PROV3310;Huntsville;;;;;;;;;;;;;
-PROV3309;Tetellan;;;;;;;;;;;;;
+PROV3309;Tlatlauquiltepec;;;;;;;;;;;;;
 PROV3308;Shupenze;;;;;;;;;;;;;
 PROV3307;Korce;;;;;;;;;;;;;
 PROV3306;Metsovo;;;;;;;;;;;;;
@@ -252,7 +252,7 @@ FRA_406;Champagne;;;;;;;;;;;;;
 PROV3263;Fort William;;;;;;;;;;;;;
 PROV3264;Nicobar Islands;;;;;;;;;;;;;
 PROV861;Scutari;;;;;;;;;;;;;
-PROV828;Chalchihuitl;;;;;;;;;;;;;
+PROV828;Xochitepec;;;;;;;;;;;;;
 PROV860;Kostantiniye;;;;;;;;;;;;;
 PROV869;Smyrna;;;;;;;;;;;;;
 RUS_1008;Moskva;;;;;;;;;;;;;
@@ -811,12 +811,6 @@ ENG_2071;Rozwi;;;;;;;;;;;;;
 ENG_2074;Bechuanaland;;;;;;;;;;;;;
 ENG_2094;Griqualand West;;;;;;;;;;;;;
 PROV2124;Maore;;;;;;;;;;;;;
-MEX_2149;Cohauila;;;;;;;;;;;;;
-MEX_2159;Cempohuallan;;;;;;;;;;;;;
-MEX_2161;Jalisco;;;;;;;;;;;;;
-MEX_2170;Guerrero;;;;;;;;;;;;;
-MEX_2172;México;;;;;;;;;;;;;
-MEX_2181;Chiapas;;;;;;;;;;;;;
 PROV220;Annapolis;;;;;;;;;;;;;
 PROV3;Fort Nikolaevskaia;;;;;;;;;;;;;
 PROV4;Nikolaevsk;;;;;;;;;;;;;
