--- a/KOS/localisation/Sitka.csv
+++ b/KOS/localisation/Sitka.csv
@@ -517,10 +517,10 @@ BHM_socialist_4;Socialist Labour Party;Parti travailliste;Labour Party;;;;;;;;;;
 BHM_socialist_5;Socialist Party of The Bahamas;Parti travailliste;Labour Party;;;;;;;;;;;
 BHM_socialist_6;National Socialist Party;Parti travailliste;Labour Party;;;;;;;;;;;
 BHM_socialist_7;Co-operative Party;Parti travailliste;Labour Party;;;;;;;;;;;
-ZAC;Zacatecas;;;;;;;;;;;;;
+ZAC;Nakalotiloayan Chichimecatl;;;;;;;;;;;;;
 ZAC_ADJ;Zacatecan;;;;;;;;;;;;;
-ZAC_democracy;Republic of Zacatecas;;;;;;;;;;;;;
-ZAC_federal_democracy;Republic of Zacatecas;;;;;;;;;;;;;
+ZAC_democracy;Nakalotiloayan Chichimecatl;;;;;;;;;;;;;
+ZAC_federal_democracy;Nakalotiloayan Chichimecatl;;;;;;;;;;;;;
 ZAC_anarcho_liberal;Facci?n Radical;Partido Federalista;Partido Federalista;;;;;;;;;;;
 ZAC_anarcho_liberal_1;Convencionistas;Partido Federalista;Partido Federalista;;;;;;;;;;;
 ZAC_anarcho_liberal_2;Facci?n Radical;Partido Federalista;Partido Federalista;;;;;;;;;;;
