--- a/KOS/localisation/text.csv
+++ b/KOS/localisation/text.csv
@@ -10306,7 +10306,7 @@ PROV2152;Monclova;Monclova;Monclova;;Monclova;;;;;;;;
 PROV2153;Coyohuacan;Durango;Durango;;Durango;;;;;;;;
 PROV2154;Xocohtepec;Santa Maria del Oro;Santa Maria del Oro;;Santa Maria del Oro;;;;;;;;
 PROV2155;Tzompanco;Torreón;Torreon;;Torreón;;;;;;;;
-PROV2156;Mazatlan;Mazatlán;Mazatlan;;Mazatlán;;;;;;;;
+PROV2156;Colhuacan;Mazatlán;Mazatlan;;Mazatlán;;;;;;;;
 PROV2157;Yaquitlan;Culiacán;Culiacan;;Culiacán;;;;;;;;
 PROV2158;Tlalnepantla;Zacatecas;Zacatecas;;Zacatecas;;;;;;;;
 PROV2159;Xochitepec;San Luis Potosi;San Luis Potosi;;San Luis Potos?;;;;;;;;;
@@ -10316,10 +10316,10 @@ PROV2162;Macuiltepetl;Macuiltepetl;Veracruz;;Veracruz;;;;;;;;
 PROV2163;Oxitipan;Tampico;Tampico;;Tampico;;;;;;;;
 PROV2164;Cuetlaxtlan;Minatitlán;Minatitlan;;Minatitlán;;;;;;;;
 PROV2165;Villahermosa;Villahermosa;Villahermosa;;Villahermosa;;;;;;;;
-PROV2166;Nochistlan;Guadalajara;Guadalajara;;Guadalajara;;;;;;;;
-PROV2167;Chupicuaro;Guanajuato;Guanajuato;;Guanajuato;;;;;;;;
+PROV2166;Tecpatitltan;Guadalajara;Guadalajara;;Guadalajara;;;;;;;;
+PROV2167;Pechichitane;Guanajuato;Guanajuato;;Guanajuato;;;;;;;;
 PROV2168;Amaxocotlan;Puerto Vallarta;Puerto Vallarta;;Puerto Vallarta;;;;;;;;
-PROV2169;Tomatlan;Colima;Colima;;Colima;;;;;;;;
+PROV2169;Colliman;Colima;Colima;;Colima;;;;;;;;
 PROV2170;Tzintzuntzan;Morelia;Morelia;;Morelia;;;;;;;;
 PROV2172;Tenochtitlan;Mexico;Mexico City;;Ciudad de México;;;;;;;;
 PROV2173;Cimapan;Querétaro;Queretaro;;Queretaro;;;;;;;;
@@ -10330,7 +10330,7 @@ PROV2177;Huaxcayac;Oaxaca;Oaxaca;;Oaxaca;;;;;;;;
 PROV2178;Miahuatlan;Collataro;Collataro;;Collataro;;;;;;;;
 PROV2179;Tototepec;Acapulco;Acapulco;;Acapulco;;;;;;;;
 PROV2180;Tecomaixtlahuacan;Chilpancingo;Chilpancingo;;Chilpancingo;;;;;;;;
-PROV2181;Tuxtla;Tuxtla;Tuxtla;;Tuxtla;;;;;;;;
+PROV2181;Tuchtlan;Tuxtla;Tuxtla;;Tuxtla;;;;;;;;
 PROV2182;Xoconochco;Tapachula;Tapachula;;Tapachula;;;;;;;;
 PROV2183;Tsiibil Chaaltun;Merida;Merida;;Mérida;;;;;;;;
 PROV2184;Kaan Peech;Campeche;Campeche;;Campeche;;;;;;;;
@@ -11324,7 +11324,7 @@ ENG_46;Ontario;Ontario;Ontario;;Ontario;;;;;;;;
 ENG_58;Quebec;Québécois;Quebec;;Quebec;;;;;;;;
 ENG_74;Newfoundland;Terre-Neuve;Neufundland;;Terra Nova;;;;;;;;
 TEX_132;Taisaculum;Taisaculum;Taisaculum;;Taisaculum;;;;;;;;
-UCA_2186;Guatemala;Guatemala;Guatemala;;Guatemala;;;;;;;;
+UCA_2186;Cuauhtemallan;Guatemala;Guatemala;;Guatemala;;;;;;;;
 UCA_2197;Nicaragua;Nicaragua;Nicaragua;;Nicaragua;;;;;;;;
 UCA_2201;Costa Rica;Costa Rica;Costa Rica;;Costa Rica;;;;;;;;
 CLM_1723;Panama;Panama;Panama;;Panam?;;;;;;;;
@@ -11466,9 +11466,8 @@ REMOVE_ENG_203;North Caribbean Islands;Îles Caraïbes du Nord;Nordkaribische Inse
 ENG_2228;Lesser Antilles;Petites Antilles;Kleine Antillen;;Antillas Menores;;;;;;;;
 MEX_2138;Sonora;Sonora;Sonora;;Sonora;;;;;;;;
 MEX_2146;Nuevo León;Nuevo León;Nuevo León;;Nuevo León;;;;;;;;
-MEX_2173;Zacatecas;Zacatecas;Zacatecas;;Zacatecas;;;;;;;;
 MEX_2162;México;México;Mexiko;;México;;;;;;;;
-MEX_2183;Yucatán;Yucatán;Yucatán;;Yucatán;;;;;;;;
+MEX_2183;Ah Canul;Yucatán;Yucatán;;Yucatán;;;;;;;;
 CLM_2251;Antioquía;Antioquía;Antioquía;;Antioquía;;;;;;;;
 CLM_2247;Cundinamarca;Cundinamarca;Cundinamarca;;Cundinamarca;;;;;;;;
 CLM_2262;Guaviare;Guaviare;Guaviare;;Guaviare;;;;;;;;
